--- a/index.html
+++ b/index.html
@@ -5,51 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>My project</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--header-->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header-page">
+      <nav class="header-nav">
+        <a href="./index.html" class="logo-studio"
+          ><span class="logo-web">Web</span>Studio
+        </a>
+        <ul class="list-cast">
+          <li><a href="./index.html" class="site-nav current">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="site-nav">Portfolio</a>
+          </li>
+          <li><a href="" class="site-nav">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="contacts">
+        <ul class="list-cast">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="email-tell"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="tel:+110001111111" class="email-tell"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <!-- Main-->
     <main>
       <!--Section 1-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-hero">
+        <h1 class="title-main">Effective Solutions for Your Business</h1>
+        <button type="button" class="but-hero">Order Service</button>
       </section>
 
       <!--Section 2-->
       <section>
-        <h2>Coment fyture</h2>
-        <ul>
+        <h2 class="invisible">Coment fyture</h2>
+        <ul class="list-cast">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="general-info">Strategy</h3>
+            <p class="paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="general-info">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -57,7 +75,7 @@
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="general-info">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -65,7 +83,7 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="general-info">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -74,49 +92,77 @@
         </ul>
       </section>
 
-      <!--Section 3-->
+      <!--Section work 3-->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title-section-work">What are we doing</h2>
+        <ul class="list-cast">
           <li>
-            <img src="./images/img1.jpg" width="360" alt="computer" />
+            <img
+              src="./images/img1.jpg"
+              class="section-work-img"
+              width="360"
+              height="300"
+              alt="computer"
+            />
           </li>
           <li>
-            <img src="./images/img2.jpg" width="360" alt="phone" />
+            <img
+              src="./images/img2.jpg"
+              class="section-work-img"
+              width="360"
+              height="300"
+              alt="phone"
+            />
           </li>
           <li>
-            <img src="./images/img3.jpg" width="360" alt="computer-phone" />
+            <img
+              src="./images/img3.jpg"
+              class="section-work-img"
+              width="360"
+              height="300"
+              alt="computer-phone"
+            />
           </li>
         </ul>
       </section>
 
       <!--Section 4-->
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="about-team">Our Team</h2>
+        <ul class="list-cast">
           <li>
-            <img src="./images/mark.jpg" width="264" alt="mark" />
+            <img src="./images/mark.jpg" width="264" height="260" alt="mark" />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-name">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom.jpg" width="264" alt="tom" />
+            <img src="./images/tom.jpg" width="264" height="260" alt="tom" />
 
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-name">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" width="264" alt="camila" />
+            <img
+              src="./images/camila.jpg"
+              width="264"
+              height="260"
+              alt="camila"
+            />
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title-name">Camila Garcia</h3>
+            <p class="profession">Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel.jpg" width="264" alt="daniel" />
+            <img
+              src="./images/daniel.jpg"
+              width="264"
+              height="260"
+              alt="daniel"
+            />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title-name">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -124,8 +170,10 @@
 
     <!-- Foter-->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-studio"
+        ><span class="logo-web">Web</span>Studio</a
+      >
+      <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
