--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
     </main>
 
     <!-- Foter-->
-    <footer>
-      <a href="./index.html" class="logo-studio"
+    <footer class="fon-foot">
+      <a href="./index.html" class="logo-studio-lihgt"
         ><span class="logo-web">Web</span>Studio</a
       >
       <p class="text-footer">
