--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                 alt="banking-app"
               />
               <h2 class="title-app">Banking App Interface Concept</h2>
-              <span class="name-app">App</span>
+              <p class="name-app">App</p>
             </a>
           </li>
           <li>
@@ -80,7 +80,7 @@
                 alt="cashless-payment"
               />
               <h2 class="title-app">Cashless Payment</h2>
-              <span class="name-app">Marketing</span>
+              <p class="name-app">Marketing</p>
             </a>
           </li>
           <li>
@@ -92,7 +92,7 @@
                 alt="meditaion-app"
               />
               <h2 class="title-app">Meditaion App</h2>
-              <span class="name-app">App</span>
+              <p class="name-app">App</p>
             </a>
           </li>
           <li>
@@ -104,7 +104,7 @@
                 alt="taxi-service"
               />
               <h2 class="title-app">Taxi Service</h2>
-              <span class="name-app">Marketing</span>
+              <p class="name-app">Marketing</p>
             </a>
           </li>
           <li>
@@ -116,7 +116,7 @@
                 alt="scren-illustrations"
               />
               <h2 class="title-app">Screen Illustrations</h2>
-              <span class="name-app">Design</span>
+              <p class="name-app">Design</p>
             </a>
           </li>
           <li>
@@ -128,7 +128,7 @@
                 alt="online-courses"
               />
               <h2 class="title-app">Online Courses</h2>
-              <span class="name-app">Marketing</span>
+              <p class="name-app">Marketing</p>
             </a>
           </li>
           <li>
@@ -140,7 +140,7 @@
                 alt="instagram-stories"
               />
               <h2 class="title-app">Instagram Stories Concept</h2>
-              <span class="name-app">Design</span>
+              <p class="name-app">Design</p>
             </a>
           </li>
           <li>
@@ -152,7 +152,7 @@
                 alt="organic-food"
               />
               <h2 class="title-app">Organic Food</h2>
-              <span class="name-app">Web Site</span>
+              <p class="name-app">Web Site</p>
             </a>
           </li>
           <li>
@@ -164,14 +164,14 @@
                 alt="fresh-coffee"
               />
               <h2 class="title-app">Fresh Coffee</h2>
-              <span class="name-app">Web Site</span>
+              <p class="name-app">Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo-studio"
+    <footer class="fon-foot">
+      <a href="./index.html" class="logo-studio-lihgt"
         ><span class="logo-web">Web</span>Studio</a
       >
       <p class="text-footer">
